# poc-monday-orange-csv-fastapi

./: Procfile  main.py  plan.md  projects_columns_ids.json  pyproject.toml  sample.csv  subtasks_columns_ids.json
info-data/: projects_items_query_full.json
src/: config.py  dependencies.py  logger.py  main.py
src/models/: mapping.py
src/routers/: sync.py
src/services/: monday.py  sync.py
src/utils/: csv.py  format.py  monday_values.py
